test/trivial/lydia/octalBad.good
octalBad.chpl:2: error: syntax error near 'o87'
